k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: transport-tracker
  name: transport-tracker
